--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <a href="http://rehan284.github.io/Calculator/">Calculator ONLINE!!!</a>
     <br>
     <br>
+    <a href="http://rehan284.github.io/Maths-Quiz/">Maths Quiz</a>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
