--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <br>
     <br>
     <a href="http://rehan284.github.io/Maths-Quiz/">Maths Quiz</a>
+    <br>
+    <br>
+    <a href="http://rehan284.github.io/Rock-Paper-Sciccors/">Rock Paper Siccors vs AI</a>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
