--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <a href="http://rehan284.github.io/Calculator/">Calculator ONLINE!!!</a>
     <br>
     <br>
+    <a href="http://rehan284.github.io/Hangman/">Hangman ONLINE!!!</a>
+    <br>
+    <br>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
