--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     <a href="http://rehan284.github.io/Hangman/">Hangman ONLINE!!!</a>
     <br>
     <br>
-    <a href="http://rehan284.github.io/Hangman/">Hangman ONLINE!!!</a>
+    <a href="https://rehan284.github.io/Maths-Quiz/">Maths Quiz</a>
     <br>
     <br>
+    <a href="https://rehan284.github.io/Quiz/">Maths Addition Quiz</a>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
