--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <br>
     <br>
     <a href="https://rehan284.github.io/Quiz/">Maths Addition Quiz</a>
+    <br>
+   <br>
+   <h6>favicon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></h6>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
