--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
     <a href="https://rehan284.github.io/Quiz/">Maths Addition Quiz</a>
     <br>
    <br>
+   <a href="https://rstarchatapp.netlify.app/">Chat app ONLINE!!!!!!!!!</a>
+   <br>
+   <br>
    <h6>favicon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></h6>
     <h2>And many more coming soon..........</h2>
 </body>
