Added new website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
    <a href="https://rstarchatapp.netlify.app/">Chat app ONLINE!!!!!!!!!</a>
    <br>
    <br>
-   <h6>favicon made by <a href="https://www.flaticon.com/authors/freepik" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon"> www.flaticon.com</a></h6>
+    <a href="http://rehan284.github.io/Digital-Clock/">Digital Clock ONLINE!!!</a>
+    <br>
+    <br>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
