--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <a href="http://rehan284.github.io/Digital-Clock/">Digital Clock ONLINE!!!</a>
     <br>
     <br>
+    <a href="http://rstarweatherapp.netlify.app">Weather app(INSTALL IT!!!)</a>
+    <br>
+    <br>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
