--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <h1><b > WEBSITE POINTER</b></h1>
-    <a href="http://rehan284.github.io/Covid-19/">Coronavirus Tracker</a>
+    <a href="https://rehan284.github.io/Covid-19/">Coronavirus Tracker</a>
     <br>
     <br>
-    <a href="http://rehan284.github.io/Text-to-Speech/">Text to Speech ONLINE!!</a>
+    <a href="https://rehan284.github.io/Text-to-Speech/">Text to Speech ONLINE!!</a>
     <br>
     <br>
-    <a href="http://rehan284.github.io/Calculator/">Calculator ONLINE!!!</a>
+    <a href="https://rehan284.github.io/Calculator/">Calculator ONLINE!!!</a>
     <br>
     <br>
-    <a href="http://rehan284.github.io/Hangman/">Hangman ONLINE!!!</a>
+    <a href="https://rstardoodledraw.netlify.app/">Hangman ONLINE!!!</a>
     <br>
     <br>
     <a href="https://rehan284.github.io/Maths-Quiz/">Maths Quiz</a>
@@ -35,7 +35,7 @@
     <a href="http://rstarweatherapp.netlify.app">Weather app(INSTALL IT!!!)</a>
     <br>
     <br>
-    <a href="https://mega.nz/file/68oA2Qza#1bhTNe1u52qvGA-ZigXfEY6UWXwHOsZ_q_qIY2c3p7U">DOODLE DRAW!!!</a>
+    <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW!!!</a>
     <br>
     <br>
     <h2>And many more coming soon..........</h2>
