--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW!!!</a>
     <br>
     <br>
+    <a href="http://rehan284.github.io/Leo-website">Leo The Bot's Website</a>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
