--- a/index.html
+++ b/index.html
@@ -8,28 +8,28 @@
 </head>
 <body>
     <h1><b > WEBSITE POINTER</b></h1>
-    <a href="https://rehan284.github.io/Covid-19/">Coronavirus Tracker</a>
+    <a href="https://rstar284.github.io/Covid-19/">Coronavirus Tracker</a>
     <br>
     <br>
-    <a href="https://rehan284.github.io/Text-to-Speech/">Text to Speech ONLINE!!</a>
+    <a href="https://rstar284.github.io/Text-to-Speech/">Text to Speech ONLINE!!</a>
     <br>
     <br>
-    <a href="https://rehan284.github.io/Calculator/">Calculator ONLINE!!!</a>
+    <a href="https://rstar284.github.io/Calculator/">Calculator ONLINE!!!</a>
     <br>
     <br>
     <a href="https://rstardoodledraw.netlify.app/">Hangman ONLINE!!!</a>
     <br>
     <br>
-    <a href="https://rehan284.github.io/Maths-Quiz/">Maths Quiz</a>
+    <a href="https://rstar284.github.io/Maths-Quiz/">Maths Quiz</a>
     <br>
     <br>
-    <a href="https://rehan284.github.io/Quiz/">Maths Addition Quiz</a>
+    <a href="https://rstar284.github.io/Quiz/">Maths Addition Quiz</a>
     <br>
    <br>
    <a href="https://rstarchatapp.netlify.app/">Chat app ONLINE!!!!!!!!!</a>
    <br>
    <br>
-    <a href="http://rehan284.github.io/Digital-Clock/">Digital Clock ONLINE!!!</a>
+    <a href="http://rstar284.github.io/Digital-Clock/">Digital Clock ONLINE!!!</a>
     <br>
     <br>
     <a href="http://rstarweatherapp.netlify.app">Weather app(INSTALL IT!!!)</a>
@@ -38,7 +38,7 @@
     <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW!!!</a>
     <br>
     <br>
-    <a href="http://rehan284.github.io/Leo-website">Leo The Discord Bot's Website</a>
+    <a href="http://star284.github.io/Leo-website">Leo The Discord Bot's Website</a>
     <h2>And many more coming soon..........</h2>
 </body>
 </html>
