--- a/index.html
+++ b/index.html
@@ -4,41 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles.css">
     <title>Website Pointer</title>
 </head>
 <body>
-    <h1><b > WEBSITE POINTER</b></h1>
+    <div id="text">
+        <h1><b > WEBSITE POINTER</b></h1>
     <a href="https://rstar284.github.io/Covid-19/">Coronavirus Tracker</a>
     <br>
     <br>
-    <a href="https://rstar284.github.io/Text-to-Speech/">Text to Speech ONLINE!!</a>
+    <a href="https://rstar284.github.io/Text-to-Speech/">Text to Speech!</a>
     <br>
     <br>
-    <a href="https://rstar284.github.io/Calculator/">Calculator ONLINE!!!</a>
+    <a href="https://rstar284.github.io/Calculator/">Calculator</a>
     <br>
     <br>
-    <a href="https://rstardoodledraw.netlify.app/">Hangman ONLINE!!!</a>
+    <a href="https://rstardoodledraw.netlify.app/">Hangman</a>
     <br>
     <br>
     <a href="https://rstar284.github.io/Maths-Quiz/">Maths Quiz</a>
     <br>
     <br>
-    <a href="https://rstar284.github.io/Quiz/">Maths Addition Quiz</a>
-    <br>
    <br>
-   <a href="https://rstarchatapp.netlify.app/">Chat app ONLINE!!!!!!!!!</a>
+   <a href="https://rstarchatapp.netlify.app/">Chat app(Not working currently)</a>
    <br>
    <br>
-    <a href="http://rstar284.github.io/Digital-Clock/">Digital Clock ONLINE!!!</a>
+    <a href="http://rstar284.github.io/Digital-Clock/">Digital Clock!</a>
     <br>
     <br>
-    <a href="http://rstarweatherapp.netlify.app">Weather app(INSTALL IT!!!)</a>
+    <a href="http://rstarweatherapp.netlify.app">Weather app</a>
     <br>
     <br>
-    <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW!!!</a>
+    <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW</a>
     <br>
     <br>
-    <a href="http://star284.github.io/Leo-website">Leo The Discord Bot's Website</a>
+    <a href="http://rstar284.github.io/Leo-website">R Guard The Discord Moderation Bot</a>
     <h2>And many more coming soon..........</h2>
+    </div>
 </body>
 </html>
