Added discord embed support

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:site_name" content="Rstar284's Websiter">
+    <meta property="og:url" content="https://rstar284.github.io">
+    <meta property="og:title" content="Website Pointer">
+    <meta property="og:description" content="A little description of this page">
+    <meta property="og:type" content="website">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Website Pointer</title>
@@ -23,7 +28,6 @@
     <br>
     <br>
     <a href="https://rstar284.github.io/Maths-Quiz/">Maths Quiz</a>
-    <br>
     <br>
    <br>
    <a href="https://rstarchatapp.netlify.app/">Chat app(Not working currently)</a>
