Fixed a stupid mistake

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:site_name" content="Rstar284's Websiter">
     <meta property="og:url" content="https://rstar284.github.io">
     <meta property="og:title" content="Website Pointer">
-    <meta property="og:description" content="A little description of this page">
+    <meta property="og:description" content="You can go to all the websites i made!">
     <meta property="og:type" content="website">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
