Added the image, hopefully :(

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="Website Pointer">
     <meta property="og:description" content="You can go to all the websites i made!">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="favicon.ico" >
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Website Pointer</title>
@@ -30,7 +31,7 @@
     <a href="https://rstar284.github.io/Maths-Quiz/">Maths Quiz</a>
     <br>
    <br>
-   <a href="https://rstarchatapp.netlify.app/">Chat app(Not working currently)</a>
+   <a href="https://rstarchatapp.netlify.app/">Chat app</a>
    <br>
    <br>
     <a href="http://rstar284.github.io/Digital-Clock/">Digital Clock!</a>
@@ -42,7 +43,7 @@
     <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW</a>
     <br>
     <br>
-    <a href="http://rstar284.github.io/Leo-website">R Guard The Discord Moderation Bot</a>
+    <a href="http://rstar284.github.io/R-Guard-Website">R Guard The Discord Moderation Bot</a>
     <h2>And many more coming soon..........</h2>
     </div>
 </body>
