Ok now fixed image :P

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Website Pointer">
     <meta property="og:description" content="You can go to all the websites i made!">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="favicon.ico" >
+    <meta property="og:image" content="./favicon.png" >
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Website Pointer</title>
