--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:description" content="You can go to all the websites i made!">
     <meta property="og:type" content="website">
     <meta property="og:image" itemprop="image" content="./favicon.png" >
+    <meta name="theme-color" content="#00FFFF">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Website Pointer</title>
