--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="Website Pointer">
     <meta property="og:description" content="You can go to all the websites i made!">
     <meta property="og:type" content="website">
-    <meta property="og:image" itemprop="image" content="./favicon.png" >
+    <meta property="og:image" content="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png">
     <meta name="theme-color" content="#00FFFF">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
