--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:site_name" content="Rstar284's Websiter">
+    <meta property="og:site_name" content="Rstar284's Website">
     <meta property="og:url" content="https://rstar284.github.io">
     <meta property="og:title" content="Website Pointer">
     <meta property="og:description" content="You can go to all the websites i made!">
