I just fixed the wierdest mistake ive done :/

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <a href="https://rstar284.github.io/Calculator/">Calculator</a>
     <br>
     <br>
-    <a href="https://rstardoodledraw.netlify.app/">Hangman</a>
+    <a href="https://rstar284.github.io/Hangman/">Hangman</a>
     <br>
     <br>
     <a href="https://rstar284.github.io/Maths-Quiz/">Maths Quiz</a>
