Somehow all lost things gets found

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
     <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW</a>
     <br>
     <br>
+        <a href="https://rstar284.github.io/Rock-Paper-Sciccors/">Rock Paper Sciccors Game</a>
+        <br>
+        <br>
     <a href="http://rstar284.github.io/R-Guard-Website">R Guard The Discord Moderation Bot</a>
     <h2>And many more coming soon..........</h2>
     </div>
