--- a/index.html
+++ b/index.html
@@ -5,50 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:site_name" content="Rstar284's Website">
     <meta property="og:url" content="https://rstar284.github.io">
-    <meta property="og:title" content="Website Pointer">
-    <meta property="og:description" content="You can go to all the websites i made!">
+    <meta property="og:title" content="Rstar284's Website">
+    <meta property="og:description" content="Main page">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png">
     <meta name="theme-color" content="#00FFFF">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    <title>Website Pointer</title>
+    <title>Rstar284's Website</title>
 </head>
 <body>
     <div id="text">
-        <h1><b > WEBSITE POINTER</b></h1>
-    <a href="https://rstar284.github.io/Covid-19/">Coronavirus Tracker</a>
-    <br>
-    <br>
-    <a href="https://rstar284.github.io/Text-to-Speech/">Text to Speech!</a>
-    <br>
-    <br>
-    <a href="https://rstar284.github.io/Calculator/">Calculator</a>
-    <br>
-    <br>
-    <a href="https://rstar284.github.io/Hangman/">Hangman</a>
-    <br>
-    <br>
-    <a href="https://rstar284.github.io/Maths-Quiz/">Maths Quiz</a>
-    <br>
-   <br>
-   <a href="https://rstarchatapp.netlify.app/">Chat app</a>
-   <br>
-   <br>
-    <a href="http://rstar284.github.io/Digital-Clock/">Digital Clock!</a>
-    <br>
-    <br>
-    <a href="http://rstarweatherapp.netlify.app">Weather app</a>
-    <br>
-    <br>
-    <a href="http://rstardoodledraw.netlify.app">DOODLE DRAW</a>
-    <br>
-    <br>
-        <a href="https://rstar284.github.io/Rock-Paper-Sciccors/">Rock Paper Sciccors Game</a>
-        <br>
-        <br>
-    <a href="http://rstar284.github.io/R-Guard-Website">R Guard The Discord Moderation Bot</a>
-    <h2>And many more coming soon..........</h2>
+        <img src="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png" alt="rstar284's pfp">
+        <h1><b>Hi there! Im Rstar, your everyday coding star :))</b></h1>
+        <h2>Some of my website creation are at https://rstar284.tk/web-pointer</h2>
     </div>
 </body>
 </html>
