updated pfp and other stuff

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 </head>
 <body>
     <div id="text">
-        <img src="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png" alt="rstar284's pfp">
+        <img src="https://avatars.githubusercontent.com/u/56640404?s=400&u=be0f198d3a1fe7e6ac26f397eb1488f7859ececb&v=4" alt="rstar284's pfp">
         <h1><b>Hi there! Im Rstar, your everyday coding star :))</b></h1>
         <h2>Some of my website creation are at https://rstar284.tk/web-pointer</h2>
+        <footer>my <a href="https://github.com/Rstar284"> github</a> Bai!</footer>
     </div>
 </body>
 </html>
