--- a/index.html
+++ b/index.html
@@ -19,9 +19,8 @@
         <img src="https://avatars.githubusercontent.com/u/56640404?s=400&u=be0f198d3a1fe7e6ac26f397eb1488f7859ececb&v=4" width="400" alt="rstar284's pfp">
     </div>
     <div id="text">
-        <h1><b>Hi there! Im Rstar, your everyday coding star :))</b></h1>
-        <h2>some of my projects (web only) are at <a href="https://rstar284.tk/web-pointer"> this page</a></h2>
-        <footer><b>My <a href="https://github.com/Rstar284"> Github page</a></b></footer>
+        <h1><b>Hi there! Im Rstar, This place under construction OwO</b></h1>
+        <footer><b>My <a href="https://github.com/Rstar284"> Github page</a><br>❤️ :></b></footer>
     </div>
 </body>
 </html>
