--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="text">
         <h1><b>Hi there! Im Rstar, This place under construction OwO</b></h1>
-        <footer><b>My <a href="https://github.com/Rstar284"> Github page</a><br>❤️ :></b></footer>
+        <footer><b>My <a href="https://github.com/Rstar284"> Github page</a><br>With ❤️ :></b></footer>
     </div>
 </body>
 </html>
