--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
         <img src="https://avatars.githubusercontent.com/u/56640404?s=400&u=be0f198d3a1fe7e6ac26f397eb1488f7859ececb&v=4" width="400" alt="rstar284's pfp">
     </div>
     <div id="text">
-        <h1><b>Hi there! Im Rstar, This place under construction OwO<br>In the mean time... <a href="favsong">Listen to my fav song!</a></b></h1>
-        <footer><b><a href="https://github.com/Rstar284">Github page</a><br>With ❤️ :></b></footer>
+        <h1><b>Hi there! Im Rstar, This place under construction OwO<br></b></h1>
+        <br><br><br><br>
+        <footer><b><a href="https://github.com/Rstar284">Github page</a><br>With Much ❤️ :></b></footer>
     </div>
 </body>
 </html>
