--- a/index.html
+++ b/index.html
@@ -20,7 +20,27 @@
     </div>
     <div id="text">
         <h1><b>Hi there! Im Rstar, This place under construction OwO<br></b></h1>
-        <br><br><br><br>
+        <br><br>
+        <a href="https://github.com/Rstar284/">
+  <img width=450 height=170 align="center" src="https://github-readme-stats.vercel.app/api?username=Rstar284&theme=tokyonight&show_icons=truehide_border=true" />
+</a>
+<a href="https://github.com/Rstar284/">
+  <img align="center" src="https://github-readme-stats.vercel.app/api/top-langs/?username=Rstar284&theme=tokyonight&layout=compact&hide_border=true" />
+</a>
+<p align="center"><img src="https://github-readme-streak-stats.herokuapp.com/?user=Rstar284&theme=black-ice&hide_border=true&stroke=0000&background=0D1117&ring=e05397&fire=e05397&currStreakLabel=e05397" alt="Rstar284" /></p>
+<p align="center"> <a href="https://github.com/Rstar284"><img src="https://github-profile-trophy.vercel.app/?username=Rstar284&margin-w=5&theme=radical" alt="Rstar284" /></a> </p>
+
+<div align="center">
+    <img src="https://github-profile-summary-cards.vercel.app/api/cards/profile-details?username=rstar284&theme=solarized_dark" width="800" />
+    <br />
+    <img src="https://github-profile-summary-cards.vercel.app/api/cards/stats?username=rstar284&theme=solarized_dark" />
+</div>
+<div align="center">
+    <img src="https://github-profile-summary-cards.vercel.app/api/cards/repos-per-language?username=rstar284&theme=solarized_dark" width="390" />
+    <img src="https://github-profile-summary-cards.vercel.app/api/cards/most-commit-language?username=rstar284&theme=solarized_dark" width="390" />
+</div>
+
+        <br><br>
         <footer><b><a href="https://github.com/Rstar284">Github page</a><br>With Much ❤️ :></b></footer>
     </div>
 </body>
