--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png">
     <meta name="theme-color" content="#3C1C75">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png"" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Rstar284's Website</title>
 </head>
