OwO and fix fucked up quote

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png">
     <meta name="theme-color" content="#3C1C75">
-    <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png"" type="image/x-icon">
+    <link rel="shortcut icon" href="https://avatars2.githubusercontent.com/u/56640404?s=400&u=19e26b029bac7e06be7fb2ec3f84ce11001f7a34&v=4.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <title>Rstar284's Website</title>
 </head>
@@ -19,7 +19,7 @@
         <img src="https://avatars.githubusercontent.com/u/56640404?s=400&u=be0f198d3a1fe7e6ac26f397eb1488f7859ececb&v=4" width="400" alt="rstar284's pfp">
     </div>
     <div id="text">
-        <h1><b>Hi there! Im Rstar, This place under construction OwO<br></b></h1>
+        <h1><b>Hii theww! Im Rstaw (owo(tm)), This place under construction OwO *nuzzles*<br></b></h1>
         <br><br>
         <a href="https://github.com/Rstar284/">
   <img width=450 height=170 align="center" src="https://github-readme-stats.vercel.app/api?username=Rstar284&theme=tokyonight&show_icons=truehide_border=true" />
@@ -41,7 +41,7 @@
 </div>
 
         <br><br>
-        <footer><b><a href="https://github.com/Rstar284">Github page</a><br>With Much ❤️ :></b></footer>
+        <footer><b><a href="https://github.com/Rstar284">Github page</a><br>With Much ❤️ UwU</b></footer>
     </div>
 </body>
 </html>
