--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <div id="text">
         <h1><b>Hi there! Im Rstar OwO</b></h1>
         <h3>I'm a noob. Please Dont check the console.</h3>
-        <br><br>
-        <footer><b><a href="https://github.com/Rstar284">Github page</a><br>With Much ❤️  UwU</b></footer>
+        <br>
+        <footer><b><a href="https://github.com/Rstar284">My Githu</a> and <a href="https://what-is.ml">My projects</a><br>With Much ❤️  UwU</b></footer>
     </div>
 </body>
 </html>
