--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1><b>Hi there! Im Rstar OwO</b></h1>
         <h3>I'm a noob. Please Dont check the console.</h3>
         <br>
-        <footer><b><a href="https://github.com/Rstar284">My Githu</a> and <a href="https://what-is.ml">My projects</a><br>With Much ❤️  UwU</b></footer>
+        <footer><b><a href="https://github.com/Rstar284">My Github</a> and <a href="https://what-is.ml">My projects</a><br>With Much ❤️  UwU</b></footer>
     </div>
 </body>
 </html>
